ADD : operator GUI

--- a/qml.qrc
+++ b/qml.qrc
@@ -13,5 +13,6 @@
         <file>CustomComponent/CustomMessageDialog.qml</file>
         <file>CustomComponent/ListViewDialog.qml</file>
         <file>CustomComponent/TimePicker.qml</file>
+        <file>operatorRegisterView.qml</file>
     </qresource>
 </RCC>
