--- a/qml.qrc
+++ b/qml.qrc
@@ -4,7 +4,7 @@
         <file>icon/drawer_menu.png</file>
         <file>icon/findIcon.png</file>
         <file>icon/homeIcon.png</file>
-        <file>icon/vessel.png</file>
+        <file>icon/vessel12.png</file>
         <file>aircraftRegisterView.qml</file>
         <file>homeView.qml</file>
         <file>batteryRegisterView.qml</file>
